--- a/web_assets/BeamPubSub.html
+++ b/web_assets/BeamPubSub.html
@@ -57,13 +57,18 @@
 
         // create the publisher, specifying name of the subscription topic
         beamPubSub = new BeamPubSub('SOLACE/BEAM/WRITE','SOLACE/BEAM/READ');
+
+
         // assign buttons to the publisher functions
-        document.getElementById("connect").addEventListener("click", beamPubSub.connect);
-        document.getElementById("publish").addEventListener("click", beamPubSub.publish);
+         document.getElementById("publish").addEventListener("click", beamPubSub.publish);
+
+         beamPubSub.connect();
+
       };
       function iframeloaded(){
         if (beamPubSub) {
           beamPubSub.connectToSolace();
+
         }
       };
     </script>
@@ -117,38 +122,7 @@
   </div>
 
   <form class="pure-form pure-form-aligned">
-
-    <div id="connectivityForm">
-      <h2>Solace Connectivity</h2>
-    <fieldset>
-
-      <div class="pure-control-group">
-        <label for="hosturl">Solace router host url</label>
-        <input id="hosturl" type="text" value="ws://localhost:80">
-      </div>
-
-      <div class="pure-control-group">
-        <label for="message-vpn">Message-vpn</label>
-        <input id="message-vpn" type="text" placeholder="Message VPN" value="default">
-      </div>
-
-      <div class="pure-control-group">
-        <label for="username">Username</label>
-        <input id="username" type="text" placeholder="Username" value="default">
-      </div>
-
-      <div class="pure-control-group">
-        <label for="password">Password</label>
-        <input id="password" type="password" placeholder="Password" value="default">
-      </div>
-
-    </fieldset>
-    <p style="margin-left:200px">
-      <button type="button" class="pure-button pure-button-primary" id="connect">Connect</button>
-    </p>
-    </div>
-
-    <div id="WordCount" style="display:none">
+    <div id="WordCount">
       <h2>Word Count Publishing and Subscribing</h2>
     <p>
       Enter Word Count Text: <textarea id="wordcountText" rows="10" cols="45" autofocus></textarea>
@@ -158,8 +132,8 @@
     </div>
 
      <div id="WordCountTables"></div>
-
-
+     <div id="beam-loading" style="visibility:hidden"><img src="../static_assets/beam-logo.png" class="beam-processing" width="35px" height="35px" />Processing...</div>
+    <br><br>
     Log:
     <textarea id="log" rows="2" cols="90" autofocus></textarea>
 
