--- a/web_assets/BeamPubSubMovingAverage.html
+++ b/web_assets/BeamPubSubMovingAverage.html
@@ -187,7 +187,7 @@ Apache Beam Solace Sample
     IE 11 only: If you are running this sample from the local filesystem, click the "Allow blocked content" button
     in the popup below to enable JavaScript.
   </div>
-      <p style="font-size:.9em;"><img src="../static_assets/word-count-beam.png" style="width:420px; float:right; margin-left:25px;">
+      <p style="font-size:.9em;"><img src="word-count-beam.png" style="width:420px; float:right; margin-left:25px;">
           This is a simple example that streams randomized stock prices for GOOGL every secomd to Apache BEAM for calculating 5 second moving averages
       which are published right back to your browser through Solace PubSub+.</p>
       <hr style=" width:100%; border-width:1px; border-color:#00C895; margin:25px 0;">
@@ -196,7 +196,7 @@ Apache Beam Solace Sample
 <div style="width:60%; float:left; border:0px solid;">
 
 
-     <div id="beam-loading" style="visibility:hidden"><img src="../static_assets/beam-logo.png" class="beam-processing" width="35px" height="35px" />Processing...</div>
+     <div id="beam-loading" style="visibility:hidden"><img src="beam-logo.png" class="beam-processing" width="35px" height="35px" />Processing...</div>
     Log:<br>
     <textarea id="log" rows="6" cols="60" autofocus style="width:100%; font-size:.9em;"></textarea>
     
