--- a/web_assets/BeamPubSubMovingAverage.html
+++ b/web_assets/BeamPubSubMovingAverage.html
@@ -72,6 +72,8 @@
                          axisY: {
                            position: 'right'
                          },
+                         width: '100%',
+                         height: '400px'
                        })
 
 
@@ -87,6 +89,8 @@
         var subscriptionFunction = function (message) {
             if(message.getDestination().getName()==='SOLACE/BEAM/AVERAGES'){
                 var price_object=JSON.parse(message.getSdtContainer().Gi);
+                if(chart.data.series[0].data.length>999)
+                    chart.data.series[0].data.shift();
                 chart.data.series[0].data.push({x:Number(price_object.timestamp),y:Number(price_object.price)});
                 chart.update();
                 document.getElementById('beam-loading').style.visibility='hidden';
@@ -121,13 +125,10 @@
         }else {
              beamPubSub.log('Cannot publish because not connected to Solace message router.');
         }
-    };
-
+     };
 
          beamPubSub.connect();
          beamPubSub.subscribe()
-
-
 
       };
 
@@ -187,26 +188,16 @@ Apache Beam Solace Sample
     IE 11 only: If you are running this sample from the local filesystem, click the "Allow blocked content" button
     in the popup below to enable JavaScript.
   </div>
-      <p style="font-size:.9em;"><img src="word-count-beam.png" style="width:420px; float:right; margin-left:25px;">
-          This is a simple example that streams randomized stock prices for GOOGL every secomd to Apache BEAM for calculating 5 second moving averages
-      which are published right back to your browser through Solace PubSub+.</p>
-      <hr style=" width:100%; border-width:1px; border-color:#00C895; margin:25px 0;">
-
-
-<div style="width:60%; float:left; border:0px solid;">
-
-
-     <div id="beam-loading" style="visibility:hidden"><img src="beam-logo.png" class="beam-processing" width="35px" height="35px" />Processing...</div>
-    Log:<br>
-    <textarea id="log" rows="6" cols="60" autofocus style="width:100%; font-size:.9em;"></textarea>
-    
-  </form>
-</div>
-
+      <p style="font-size:.9em;"><img src="word-count-moving-average.png" style="width:420px; float:right; margin-left:25px;">
+          This is a simple example that subscribes to two streams - one stream of simulated stock prices for GOOGL and another stream for a 5 second moving average calculated by Apache BEAM</p>
       <hr style=" width:100%; border-width:1px; border-color:#00C895; margin:25px 0;">
     GOOGL: <span id="price"></span>
-    <div class="ct-chart ct-perfect-fourth"></div>
+    <div class="ct-chart ct-major-second"></div>
 </div>
+<hr style=" width:100%; border-width:1px; border-color:#00C895; margin:25px 0;">
+
+Log:<br>
+<textarea id="log" rows="6" cols="60" autofocus style="width:100%; font-size:.9em;"></textarea>
 
 </body>
 
