--- a/web_assets/BeamPubSubMovingAverage.html
+++ b/web_assets/BeamPubSubMovingAverage.html
@@ -195,9 +195,8 @@ Apache Beam Solace Sample
     <div class="ct-chart ct-major-second"></div>
 </div>
 <hr style=" width:100%; border-width:1px; border-color:#00C895; margin:25px 0;">
-
 Log:<br>
-<textarea id="log" rows="6" cols="60" autofocus style="width:100%; font-size:.9em;"></textarea>
+<textarea id="log" rows="6" cols="60"  style="width:100%; font-size:.9em;"></textarea>
 
 </body>
 
