Adding links to github

--- a/web_assets/BeamPubSubMovingAverage.html
+++ b/web_assets/BeamPubSubMovingAverage.html
@@ -189,7 +189,11 @@ Apache Beam Solace Sample
   </div>
       <p style="font-size:.9em;"><img src="word-count-moving-average.png" style="width:420px; float:right; margin-left:25px;">
           This is a simple example that subscribes to two streams - one stream of simulated stock prices for GOOGL and another stream for a 5 second moving average calculated by Apache BEAM</p>
-      <hr style=" width:100%; border-width:1px; border-color:#00C895; margin:25px 0;">
+    <br><br><a href="BeamPubSubWordCount.html">Click here to view a Solace -> Apache Beam wordcount demo</a>
+    <br><br><a href="https://github.com/thomas-kunnumpurath/solace-wordcount-beam">Click here to view the github repo</a>
+
+
+    <hr style=" width:100%; border-width:1px; border-color:#00C895; margin:25px 0;">
     GOOGL: <span id="price"></span>
     <div class="ct-chart ct-major-second"></div>
 </div>
