--- a/web_assets/BeamPubSubWordCount.html
+++ b/web_assets/BeamPubSubWordCount.html
@@ -168,7 +168,10 @@ Apache Beam Solace Sample
     IE 11 only: If you are running this sample from the local filesystem, click the "Allow blocked content" button
     in the popup below to enable JavaScript.
   </div>
-      <p style="font-size:.9em;"><img src="word-count-beam.png" style="width:420px; float:right; margin-left:25px;">This is a very simple example of an Apache Beam Pipeline that allows you to stream text via Solace PubSub+ and get the results of a word count Beam processor through another stream. When you publish a message the text is sent to a PubSub+ message broker via WebSocket, then via AMQP to Apache Beam where the word count is calculated, and the results will be streamed back via those same protocols.</p>
+      <p style="font-size:.9em;"><img src="word-count-beam.png" style="width:420px; float:right; margin-left:25px;">This is a very simple example of an Apache Beam Pipeline that allows you to stream text via Solace PubSub+ and get the results of a word count Beam processor through another stream. When you publish a message the text is sent to a PubSub+ message broker via WebSocket, then via AMQP to Apache Beam where the word count is calculated, and the results will be streamed back via those same protocols.
+          <br><br><a href="BeamPubSubMovingAverage.html">Click here to view a Solace -> Apache Beam 5 second moving average demo</a>
+          <br><br><a href="https://github.com/thomas-kunnumpurath/solace-wordcount-beam">Click here to view the github repo</a>
+      </p>
       <hr style=" width:100%; border-width:1px; border-color:#00C895; margin:25px 0;">
 
       <div style="width:35%; float:left; border:0px solid; margin-right:45px;">
